{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 43,
  "lineage": "df64da1a-3a34-492f-d671-eee583514b29",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:loadbalancer/app/ecommerce-dev-alb/03145a80921ead45",
            "arn_suffix": "app/ecommerce-dev-alb/03145a80921ead45",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-dev-alb-1244934536.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:loadbalancer/app/ecommerce-dev-alb/03145a80921ead45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-dev-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0469854e4d4ef1173"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012271db026026179"
              },
              {
                "subnet_id": "subnet-0585f4dee1b1fa25b"
              }
            ],
            "subnets": [
              "subnet-012271db026026179",
              "subnet-0585f4dee1b1fa25b"
            ],
            "tags": {
              "Name": "ecommerce-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-alb",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:loadbalancer/app/ecommerce-dev-alb/03145a80921ead45"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_subnet.public_1c",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:listener/app/ecommerce-dev-alb/03145a80921ead45/fdca66adaa11169e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:targetgroup/ecommerce-dev-tg/19cd521f585f12b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:listener/app/ecommerce-dev-alb/03145a80921ead45/fdca66adaa11169e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:loadbalancer/app/ecommerce-dev-alb/03145a80921ead45",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:listener/app/ecommerce-dev-alb/03145a80921ead45/fdca66adaa11169e"
          },
          "dependencies": [
            "module.alb.aws_lb.app",
            "module.alb.aws_lb_target_group.app",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_subnet.public_1c",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:targetgroup/ecommerce-dev-tg/19cd521f585f12b2",
            "arn_suffix": "targetgroup/ecommerce-dev-tg/19cd521f585f12b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:targetgroup/ecommerce-dev-tg/19cd521f585f12b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:loadbalancer/app/ecommerce-dev-alb/03145a80921ead45"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecommerce-dev-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-tg",
              "Project": "ecommerce"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:302165638308:targetgroup/ecommerce-dev-tg/19cd521f585f12b2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062e493429b7890c6",
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:elastic-ip/eipalloc-062e493429b7890c6",
            "association_id": "eipassoc-071a1e961350ed6d1",
            "domain": "vpc",
            "id": "eipalloc-062e493429b7890c6",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0704d95041b2fead3",
            "private_dns": "ip-10-0-1-183.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-18-176-0-110.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.0.110",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-nat-eip",
              "Project": "ecommerce"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "eipalloc-062e493429b7890c6",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:internet-gateway/igw-073ec71345b3c354a",
            "id": "igw-073ec71345b3c354a",
            "owner_id": "302165638308",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-igw",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "igw-073ec71345b3c354a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062e493429b7890c6",
            "association_id": "eipassoc-071a1e961350ed6d1",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a9f968a9e2e3eb80",
            "network_interface_id": "eni-0704d95041b2fead3",
            "private_ip": "10.0.1.183",
            "public_ip": "18.176.0.110",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-012271db026026179",
            "tags": {
              "Name": "ecommerce-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-nat",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "nat-0a9f968a9e2e3eb80",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:route-table/rtb-0c824970139c86940",
            "id": "rtb-0c824970139c86940",
            "owner_id": "302165638308",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9f968a9e2e3eb80",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-private-rt",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtb-0c824970139c86940",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:route-table/rtb-0110a77c34c0fea35",
            "id": "rtb-0110a77c34c0fea35",
            "owner_id": "302165638308",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073ec71345b3c354a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-public-rt",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtb-0110a77c34c0fea35",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09402a62bf1ae6e03",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c824970139c86940",
            "subnet_id": "subnet-0f1787010a89cf39b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtbassoc-09402a62bf1ae6e03",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_1a",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096fadf83414233e5",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c824970139c86940",
            "subnet_id": "subnet-0fb5321cdab5dbed4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtbassoc-096fadf83414233e5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_1c",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74e2c8ea1cd794f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0110a77c34c0fea35",
            "subnet_id": "subnet-012271db026026179"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtbassoc-0d74e2c8ea1cd794f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_1a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0818f95dda3de2ecb",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0110a77c34c0fea35",
            "subnet_id": "subnet-0585f4dee1b1fa25b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "rtbassoc-0818f95dda3de2ecb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_1c",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:subnet/subnet-0f1787010a89cf39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1787010a89cf39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302165638308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-private-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-private-1a",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "subnet-0f1787010a89cf39b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:subnet/subnet-0fb5321cdab5dbed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb5321cdab5dbed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302165638308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-private-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-private-1c",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "subnet-0fb5321cdab5dbed4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:subnet/subnet-012271db026026179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012271db026026179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302165638308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-public-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-public-1a",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "subnet-012271db026026179",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:subnet/subnet-0585f4dee1b1fa25b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0585f4dee1b1fa25b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302165638308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-public-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-public-1c",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "subnet-0585f4dee1b1fa25b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:vpc/vpc-0fdbd1691dea0743d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f68c6f1ace3799a1",
            "default_route_table_id": "rtb-04bdb09ff62a28d84",
            "default_security_group_id": "sg-0abdabaa2b53b9c17",
            "dhcp_options_id": "dopt-01580d689dcf43e34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdbd1691dea0743d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bdb09ff62a28d84",
            "owner_id": "302165638308",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "ecommerce-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-vpc",
              "Project": "ecommerce"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "vpc-0fdbd1691dea0743d",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group/sg-0469854e4d4ef1173",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0469854e4d4ef1173",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecommerce-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "302165638308",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-alb-sg",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sg-0469854e4d4ef1173",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group/sg-0a3c765de5185e634",
            "description": "Security Group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3c765de5185e634",
            "ingress": [
              {
                "cidr_blocks": [
                  "43.206.253.30/32"
                ],
                "description": "Allow SSH from my public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0469854e4d4ef1173"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "302165638308",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-dev-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-ec2-sg",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sg-0a3c765de5185e634",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group/sg-08bec82c348009811",
            "description": "Security Group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bec82c348009811",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3c765de5185e634"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecommerce-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "302165638308",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-dev-rds-sg",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbd1691dea0743d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sg-08bec82c348009811",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-0fcd4af37a002586c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0fcd4af37a002586c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0469854e4d4ef1173",
            "security_group_rule_id": "sgr-0fcd4af37a002586c",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-0fcd4af37a002586c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-010510c22acb01351",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-010510c22acb01351",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a3c765de5185e634",
            "security_group_rule_id": "sgr-010510c22acb01351",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-010510c22acb01351",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-04c133c660f3067d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-04c133c660f3067d2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-08bec82c348009811",
            "security_group_rule_id": "sgr-04c133c660f3067d2",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-04c133c660f3067d2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-0d67485a07e59876e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0d67485a07e59876e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0469854e4d4ef1173",
            "security_group_rule_id": "sgr-0d67485a07e59876e",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-0d67485a07e59876e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-047777bb92cc567e4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-047777bb92cc567e4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0469854e4d4ef1173",
            "security_group_rule_id": "sgr-047777bb92cc567e4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-047777bb92cc567e4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-0cd6dfbafbed25039",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic from ALB",
            "from_port": 80,
            "id": "sgr-0cd6dfbafbed25039",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0469854e4d4ef1173",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a3c765de5185e634",
            "security_group_rule_id": "sgr-0cd6dfbafbed25039",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-0cd6dfbafbed25039",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-0db25a36c8a9b8ea3",
            "cidr_ipv4": "43.206.253.30/32",
            "cidr_ipv6": null,
            "description": "Allow SSH from my public IP",
            "from_port": 22,
            "id": "sgr-0db25a36c8a9b8ea3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a3c765de5185e634",
            "security_group_rule_id": "sgr-0db25a36c8a9b8ea3",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-0db25a36c8a9b8ea3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:302165638308:security-group-rule/sgr-063ac18fbdbad2862",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL traffic from EC2",
            "from_port": 3306,
            "id": "sgr-063ac18fbdbad2862",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3c765de5185e634",
            "region": "ap-northeast-1",
            "security_group_id": "sg-08bec82c348009811",
            "security_group_rule_id": "sgr-063ac18fbdbad2862",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "302165638308",
            "id": "sgr-063ac18fbdbad2862",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    }
  ]
}